--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-ptcg-tools/
-  index.html              ← launcher homepage
-  styles.css              ← shared (optional)
-  /apps/
-    /decklists/
-      index.html
-      styles.css
-      app.js
-    /hand-calc/
-      index.html
-      styles.css
-      app.js
-    /meta/
-      index.html
-      styles.css
-      app.js
-  .nojekyll               ← optional but recommended
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>PTCG Tools</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main class="card">
+      <h1>PTCG Tools</h1>
+      <p class="sub">Tap a tool to open it.</p>
+
+      <div class="grid">
+        <a class="tile" href="./apps/decklists/">Decklist Manager</a>
+        <a class="tile" href="./apps/hand-calc/">Hand / Outs Calculator</a>
+        <a class="tile" href="./apps/meta/">Meta Analysis</a>
+      </div>
+
+      <p class="hint">Add this page to your Home Screen for an app-like launcher.</p>
+    </main>
+  </body>
+</html>
