Add link to Swiss Tournament Manager in index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
       <div class="grid">
         <a class="tile" href="./apps/decklists/">Decklist Manager</a>
+        <a class="tile" href="./apps/swiss/">Swiss Tournament Manager</a>
         <a class="tile" href="./apps/hand-calc/">Hand / Outs Calculator</a>
         <a class="tile" href="./apps/meta/">Meta Analysis</a>
       </div>
