--- a/apps/swiss/index.html
+++ b/apps/swiss/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -25,38 +24,39 @@
 
     <main class="layout">
       <section class="sidebar">
-<div class="sidebar-actions">
-  <button id="btnNew" type="button">+ New Tournament</button>
+        <div class="sidebar-actions">
+          <button id="btnNew" type="button">+ New Tournament</button>
 
-  <input id="search" type="search" placeholder="Search tournaments..." />
+          <input id="search" type="search" placeholder="Search tournaments..." />
 
-  <div class="filters">
-    <select id="filterFormat">
-      <option value="">Any format</option>
-      <option value="Bo1">Best of 1</option>
-      <option value="Bo3">Best of 3</option>
-    </select>
+          <div class="filters">
+            <select id="filterFormat">
+              <option value="">Any format</option>
+              <option value="Bo1">Best of 1</option>
+              <option value="Bo3">Best of 3</option>
+            </select>
 
-    <select id="filterType">
-      <option value="">Any type</option>
-      <option value="Cup">Cup</option>
-      <option value="Challenge">Challenge</option>
-      <option value="League">League</option>
-      <option value="GLC">GLC</option>
-      <option value="Cube">Cube</option>
-    </select>
+            <select id="filterType">
+              <option value="">Any type</option>
+              <option value="Cup">Cup</option>
+              <option value="Challenge">Challenge</option>
+              <option value="League">League</option>
+              <option value="GLC">GLC</option>
+              <option value="Cube">Cube</option>
+            </select>
 
-    <select id="filterRounds">
-      <option value="">Any rounds</option>
-      <option value="3">3 rounds</option>
-      <option value="4">4 rounds</option>
-      <option value="5">5 rounds</option>
-      <option value="6">6 rounds</option>
-      <option value="7">7 rounds</option>
-      <option value="8">8 rounds</option>
-    </select>
-  </div>
-</div>
+            <select id="filterRounds">
+              <option value="">Any rounds</option>
+              <option value="3">3 rounds</option>
+              <option value="4">4 rounds</option>
+              <option value="5">5 rounds</option>
+              <option value="6">6 rounds</option>
+              <option value="7">7 rounds</option>
+              <option value="8">8 rounds</option>
+            </select>
+          </div>
+        </div>
+
         <div id="tourList" class="list"></div>
       </section>
 
@@ -154,7 +154,11 @@
                         <button id="btnOpenImgGen" class="ghost" type="button">Open ImgGen</button>
                       </div>
                     </div>
-                    <textarea id="pDeckText" placeholder="Paste decklist text (PTCGL or Limitless)…" spellcheck="false"></textarea>
+                    <textarea
+                      id="pDeckText"
+                      placeholder="Paste decklist text (PTCGL or Limitless)…"
+                      spellcheck="false"
+                    ></textarea>
                   </div>
 
                   <div class="blocksub">
@@ -192,6 +196,11 @@
                 </div>
               </div>
 
+              <p class="hint">
+                Tip: changing results does <strong>not</strong> update standings until you tap <strong>Save round</strong>.
+                Completed rounds can be edited with <strong>Edit</strong>.
+              </p>
+
               <div id="roundsList" class="rounds"></div>
             </div>
           </section>
@@ -205,6 +214,11 @@
                   <span class="pill">Sort: Pts → Opp Win% → OppOpp Win%</span>
                 </div>
               </div>
+
+              <p class="hint">
+                Standings are calculated from <strong>fully completed rounds only</strong>.
+              </p>
+
               <div class="tablewrap">
                 <table id="standingsTable">
                   <thead>
@@ -220,9 +234,6 @@
                   <tbody></tbody>
                 </table>
               </div>
-              <p class="hint">
-                Opp Win% and OppOpp Win% follow Play! Pokémon-style resistance concepts; byes are excluded from Opp Win% averaging. :contentReference[oaicite:2]{index=2}
-              </p>
             </div>
           </section>
 
